<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context=".Activity2">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/please_enter_your_name"
        android:autofillHints="@string/please_enter_your_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/please_enter_your_number"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/please_enter_your_number"
        android:inputType="number"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/please_enter_your_website"
        android:autofillHints="@string/please_enter_your_website"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/please_enter_your_location"
        android:autofillHints="@string/please_enter_your_location"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="20dp"
        android:background="#00FFFFFF"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imghappy"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/imghappy"
            app:srcCompat="@drawable/happy"
            tools:srcCompat="@drawable/happy" />

        <ImageView
            android:id="@+id/imgokay"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/imgokay"
            app:srcCompat="@drawable/okay" />

        <ImageView
            android:id="@+id/imgsad"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/imgsad"
            app:srcCompat="@drawable/sad" />
    </LinearLayout>

</LinearLayout>